# gui-library

./: CMakeLists.txt  gui-lib-conf.h.in
include/: application.h  bounded.h  button.h  color-enum.h  color-manager.h  composite-gui-component.h  event-hander.h  font-enum.h  font-manager.h  gui-component-decorator.h  gui-component.h  history-node.h  history.h  keyboard-shortcuts.h  margin.h  mouse-event.h  padding.h  snapshot-interface.h  snapshot.h  state-enum.h  states.h  submittable.h  text-input.h  word.h
src/: application.cpp  button.cpp  color-manager.cpp  composite-gui-component.cpp  font-manager.cpp  gui-component-decorator.cpp  history.cpp  keyboard-shortcuts.cpp  main.cpp  margin.cpp  mouse-event.cpp  padding.cpp  snapshot.cpp  states.cpp  text-input.cpp  word.cpp
test/: CMakeLists.txt  test.cpp
